tests/errors/legacy-bar-separator.typ
#import "../../src/lib.typ": score
#score(time: "4/4", bars: ((notes: "C5:h | D5:h"),))
